[project]
name = "chinese-high-speed-railways"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "geopandas>=1.1.3",
  "netcdf4>=1.7.4",
  "numpy>=2.4.4",
  "osm-nets",
  "pandas>=3.0.2",
  "rioxarray>=0.22.0",
  "scipy>=1.17.1",
  "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "osm-nets",
    "pandas-stubs>=3.0.0.260204",
    "types-geopandas>=1.1.3.20260408",
]

[tool.uv.sources]
osm-nets = { path = "../maurofaccin@osm-retrieve-networks", editable = true }
